# veta

./: .gitignore  .npmignore  Cargo.toml  README.md
.github/workflows/: ci.yml
.veta/: db.sqlite
crates/veta/: Cargo.toml
crates/veta-cli/: Cargo.toml
crates/veta-cli/src/: main.rs
crates/veta-core/: Cargo.toml
crates/veta-core/src/: dateparse.rs  db.rs  error.rs  lib.rs  migrations.rs  note.rs  service.rs
crates/veta-d1/: Cargo.toml
crates/veta-d1/src/: lib.rs
crates/veta-files/: Cargo.toml
crates/veta-files/src/: lib.rs
crates/veta-sqlite/: Cargo.toml
crates/veta-sqlite/src/: lib.rs
crates/veta-worker/: .gitignore  .npmignore  Cargo.toml  package.json  wrangler.toml
crates/veta-worker/src/: lib.rs
crates/veta/src/: main.rs
examples/agent-sdk/: README.md  env.d.ts  package-lock.json  package.json  test-ws-chat.mjs  tsconfig.json  wrangler.jsonc  wrangler.veta.jsonc
examples/agent-sdk/public/: index.html
examples/agent-sdk/src/: agent.ts  tools.ts  veta.ts
examples/agents-sdk/: README.md  env.d.ts  package-lock.json  package.json  tsconfig.json  wrangler.veta.jsonc
examples/agents-sdk/public/: index.html
examples/agents-sdk/src/: agent.ts  tools.ts  veta.ts
schema/migrations/: 0001_initial.sql  0002_add_references.sql
script/: install
skills/veta/: CLAUDE.md  README.md  SKILL.md
test/cli/: _setup.txt  basic.txt  parallel.txt  repair.txt  show.txt  stdin.txt  unix.txt  validation.txt  windows.txt  z_corruption.txt
test/example-agent-sdk/: _setup.txt  _teardown.txt  basic.txt  integration.txt
test/example-agent-sdk/fixture/: server.mjs  start-server  stop-server
test/example-agents-sdk/: _setup.txt  _teardown.txt  basic.txt  integration.txt
test/example-agents-sdk/fixture/: server.mjs  start-server  stop-server
test/show/: _setup.txt
test/worker/: _setup.txt  _teardown.txt  api.txt
test/worker/fixture/: package.json  server.mjs  start-server  stop-server  wrangler.toml
