[workspace]
members = [
    "crates/veta-core",
    "crates/veta-sqlite",
    "crates/veta-d1",
    "crates/veta-cli",
    "crates/veta-worker",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["Andreas Jansson"]
license = "MIT"
homepage = "https://github.com/andreasjansson/veta"
repository = "https://github.com/andreasjansson/veta"

[workspace.dependencies]
veta-core = { path = "crates/veta-core" }
veta-sqlite = { path = "crates/veta-sqlite" }
veta-d1 = { path = "crates/veta-d1" }

async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
parse_datetime = "0.13"

# CLI dependencies
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["rt", "macros"] }
rusqlite = { version = "0.32", features = ["bundled"] }
anyhow = "1"

# Worker dependencies
worker = { version = "0.7", features = ["d1", "http"] }
worker-macros = { version = "0.7", features = ["http"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
http = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[profile.release.package."*"]
opt-level = "z"
