[package]
name = "veta-core"
description = "Core types and traits for veta - memory and knowledge base for agents"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
parse_datetime.workspace = true
