[package]
name = "veta-sqlite"
description = "SQLite backend for veta - memory and knowledge base for agents"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
veta-core.workspace = true
async-trait.workspace = true
rusqlite.workspace = true
chrono.workspace = true
regex = "1"
serde_json = "1"
