[package]
name = "veta-worker"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
veta-core.workspace = true
veta-d1.workspace = true
serde.workspace = true
serde_json.workspace = true
worker.workspace = true
worker-macros.workspace = true
http.workspace = true
