[package]
name = "veta"
description = "Memory and knowledge base for agents"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[[bin]]
name = "veta"
path = "src/main.rs"

[dependencies]
veta-core.workspace = true
veta-files = { workspace = true }
# Keep veta-sqlite for migration from old databases (temporary)
veta-sqlite.workspace = true
serde_json.workspace = true
clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
rusqlite.workspace = true
atty = "0.2"
